# PAL

./: .gitignore  README.md
backend/: pyproject.toml  run_dev.py
backend/src/pal_backend/: __init__.py  legacy_runner.py  log_processing.py  models.py  python_engine.py  server.py  thresholds.py
backend/tests/: test_log_processing.py  test_python_engine.py  test_thresholds.py
docs/: migration-notes.md
frontend/: app.js  index.html  styles.css
