[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pal-modern"
version = "0.1.0"
description = "Modern Python-powered foundation for PAL"
readme = "../README.md"
requires-python = ">=3.12"
authors = [{ name = "Codex" }]
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

